# MC-Game

./: .gitignore  Cargo.toml
common/: Cargo.toml
common/src/: events.rs  lib.rs
ecs/src/: lib.rs  vec_storage.rs
entity_macros/: Cargo.toml
entity_macros/src/: lib.rs
plugins/: Cargo.toml
plugins/src/: lib.rs
src/: components.rs  drawer.rs  entities.rs  main.rs  scene.rs  systems.rs  terrain.rs  test.rs
src/components/: mod.rs
src/entities/: mod.rs  physics.rs  (+1 more)
view/: Cargo.toml
voxelviewer/: Cargo.toml
voxelviewer/src/: camera.rs  entity.rs  lib.rs  model.rs  plugin.rs  scene.rs  screen_text.rs  shader.wgsl  texture.rs  view_actions.rs  view_system.rs  voxel.rs
voxelviewer/src/cube/: cube_mesh.rs  cube_pipeline.rs  cube_vertex.rs  mod.rs
voxelviewer/src/cube_face/: cube_face_direction.rs  mod.rs
voxelviewer/src/draw/: mod.rs  pipelines.rs  renderer.rs
voxelviewer/src/draw/geometry/: cube.rs  cube_face.rs  grid.rs  mod.rs
voxelviewer/src/draw/grid/: grid_entity_mesh.rs  grid_instance.rs  grid_pipeline.wgsl  grid_vertex.rs  mod.rs
voxelviewer/src/draw/mesh/: mod.rs  vertex.rs
voxelviewer/src/draw/shaders/: static_vertex.wgsl
voxelviewer/src/geometry/: mod.rs
voxelviewer/src/geometry/cube/: mod.rs
voxelviewer/src/geometry/cube_face/: cube_face_direction.rs  mod.rs
voxelviewer/src/geometry/grid/: mod.rs
voxelviewer/src/grid/: mod.rs
voxelviewer/src/pipelines/: mod.rs  static_vertex.wgsl  static_vertex_pipeline.rs
voxelviewer/src/quad/: cube_face_direction.rs  face.rs  hexagon.rs  mod.rs  quad_direction.rs
voxelviewer/src/scene_entity/: mod.rs  scene_entity_renderer.rs
voxelviewer/src/vertex/: mesh_instance.rs  mod.rs  static_vertex.wgsl
voxelviewer/src/view_system/: boundingbox.rs  camera_system.rs  components.rs  mod.rs  resources.rs
window/: Cargo.toml
world/: Cargo.toml
world/src/: components.rs  lib.rs  scene.rs
(+14 files in other folders)
