[package]
name = "teste"
version = "0.1.0"
edition = "2018"
resolver="2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
voxelviewer = {path="./voxelviewer"}
winit = "0.26"
rand = "0.8.4"
perlin2d = "0.2.6"
nalgebra = "0.31.0"
specs = "0.17.0"