[package]
name = "voxelviewer"
version = "0.1.0"
edition = "2018"

[dependencies]
anyhow = "1.0"
bytemuck = { version = "1.4", features = [ "derive" ] }
env_logger = "0.9"
pollster = "0.2"
image = "0.23"
log = "0.4"
wgpu_glyph = "0.16.0"
tobj = "3.0"
wgpu = "0.12"
winit = "0.26"
rand = "0.8.4"
nalgebra = "0.31.0"
specs = "0.17.0"