[package]
name = "world"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cgmath = "0.18"
ecs = {path="../ecs"}
shred = "0.12.0"
anymap = "0.12.1"
slotmap = "1.0.6"
voxelviewer = {path="../voxelviewer"}